--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -2,9 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "is_executing": false
     }
@@ -16,54 +15,87 @@
     "from sklearn import decomposition\n",
     "from scipy import linalg\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(\"all files imported successfully\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading 20news dataset. This may take a few minutes.\n",
+      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "np.set_printoptions(suppress=True)\n",
+    "categories = ['alt.atheism', 'talk.religion.misc', 'comp.graphics', 'sci.space']\n",
+    "remove = ('headers', 'footers', 'quotes')\n",
+    "newsgroups_train = fetch_20newsgroups(subset='train', categories=categories, remove=remove)\n",
+    "newsgroups_test = fetch_20newsgroups(subset='test', categories=categories, remove=remove)\n",
+    "print(newsgroups_train.filenames.shape)\n",
+    "print(\"task completed\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "np.set_printoptions(suppress=True)\n",
-    "\n"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(newsgroups_train.data[:3]))\n",
+    "np.array(newsgroups_train.target_names)[newsgroups_train.target[:3]]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-190f188",
+   "display_name": "PyCharm (twimintel)",
    "language": "python",
-   "display_name": "PyCharm (twimintel)"
+   "name": "pycharm-190f188"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
