--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
@@ -461,6 +461,44 @@
     "pycharm": {
      "name": "#%% TF-IDF\n",
      "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Wall time: 8.76 s\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "from sklearn import decomposition\n",
+    "%time u, s, v = decomposition.randomized_svd(vectors, 10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Randomized SVD \n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
